Fix cost indicator wrapping bug

--- a/source/assets/stylesheets/components/_cost-indicator.scss
+++ b/source/assets/stylesheets/components/_cost-indicator.scss
@@ -1,10 +1,11 @@
 .c-cost-indicator {
   display: inline-block;
+  letter-spacing: -0.12em;
+  white-space: nowrap;
 }
 
 .c-cost-indicator__step {
   color: tint($base-font-color, 75%);
-  margin-right: -0.2em;
 }
 
 .c-cost-indicator__step--active {
